[tool.poetry]
name = "streamlit-ion"
version = "0.1.0"
description = ""
authors = ["j_hara <j_hara@nst-co.com>"]
readme = "README.md"
packages = [{include = "streamlit_ion"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
librosa = "^0.10.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
